# TraceWave-app

./: .gitignore  LICENSE  Makefile  README.md  install.bat  install.sh  pyproject.toml  run.bat  run.sh
src/: __init__.py  models.py  sam2_boxmasker.py  tracewave.py  views.py
src/project/: __init__.py  store.py  types.py
src/services/: __init__.py  sam2_service.py  video_importer.py
src/ui/: __init__.py  image_view.py  main_window.py
